Improve class doc